@@ -4,6 +4,14 @@ Supported Presently
 
 Changelog for 1.3.8:
 * Fixed duplicate key error saving taxes (Herman V)
+* Fixed not null violation when inserting bank acct w/o bic (Chris T)
+* Corrected fkey violation when attaching file to order (Chris T)
+* Moved language input on customer/vendor form for better display (Chris T)
+* Corrected binmode handling on templates (Herman V and Chris T)
+* File.sql now loads transactionally (Chris T)
+* OE no longer requires type input for editing orders/quotations (Chris T)
+* 
+
 
 Changelog for LedgerSMB 1.3.7 (Categorized due to length)
 Database
